@startuml classes diagram

abstract class Person {
    - firstname : String
    - lastname : String
}

class User {
    - password : String
    - login : String
}

class Customer {
    - address : String
    - email : String
    - phoneNumber : String
}

class Course {
    - name : String
    - description : String
    - durationDays : int
    - isOnline : boolean
    - isOnSite : boolean
    - price : decimal
}

class Cart {
}

class Order {
    - orderDate : Date
    - totalAmount : decimal
}

class OrderCourse {
}

' Héritage
Person <|-- User
Person <|-- Customer

' Relations User -> Cart
User "1" --> "0..1" Cart
Cart "1" o-- "0..*" Course : contains

' Relations User -> Order
User "1" --> "0..*" Order

' Relation Order -> Customer
Order "1" --> "1" Customer : for
Customer "1" --> "0..*" Order

' Relation Order -> OrderCourse
Order "1" *-- "1..*" OrderCourse : includes
OrderCourse "*" --> "1" Course

@enduml
